--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,26 @@
 elevenlabs==0.2.6
 bittensor
-torch
-librosa
-transformers
+torch==2.1.0
+librosa==0.10.0.post2
+transformers==4.37.2
 jiwer
-torchaudio
+torchaudio==2.1.0
 pandas
-matplotlib
-datasets
-sentencepiece
-soundfile
-speechbrain
-tabulate
-gitpython
-TTS
-pydub
+matplotlib==3.8.2
+datasets==2.16.1
+sentencepiece==0.1.99
+soundfile==0.12.1
+speechbrain==0.5.16
+tabulate==0.9.0
+GitPython==3.1.41
+TTS==0.14.3
+pydub==0.25.1
 sox
-soundfile
-encodec
+encodec==0.1.1
 funcy
 audiolm_pytorch
-torchaudio
-scipy
-psutil
+scipy==1.12.0
+psutil==5.9.8
 GPUtil
-laion_clap
-audiocraft==1.0.0
+audiocraft==1.2.0
 pydantic==1.10.13
-fairseq==0.11.1
